@@ -122,6 +122,11 @@ You'll want to replace it with code like this::
 
 Added the PlateButton class from Cody Precord.
 
+Added wx.PyEvtHandler, which supports overriding the ProcessEvent
+method in derived classes.  Instances of this class can be pushed onto
+the event handler chain of a window in order to hook into the event
+processing algorithm. 
+
 
 
 
